ES6 module syntax implementation

--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "note-taker",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node .",
+    "dev": "nodemon ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
   },
-  "keywords": []
+  "keywords": [],
+  "type": "module"
 }
