--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "note-taker",
+  "name": "my-note-pad",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.mjs",
+  "description": "Create and save notes in a db.json",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node .",
-    "dev": "nodemon ."
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
-  },
-  "keywords": [],
-  "type": "module"
+    "express": "^4.16.4"
+  }
 }
