--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "Sean MacDonald",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "path": "^0.12.7",
     "fs": "0.0.1-security",
+    "path": "^0.12.7",
     "uniqid": "^5.4.0"
   },
   "repository": {
