--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.18.2",
     "fs": "0.0.1-security",
     "path": "^0.12.7",
-    "uniqid": "^5.4.0"
+    "uniqid": "^5.4.0",
+    "uuid": "^9.0.1"
   },
   "repository": {
     "type": "git",
